[package]
name = "leaky-bucket"
version = "0.7.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/udoprog/leaky-bucket"
homepage = "https://github.com/udoprog/leaky-bucket"
documentation = "https://docs.rs/leaky-bucket"
description = """
Futures-aware rate limiter implementation.
"""
categories = ["algorithms", "network-programming", "concurrency"]

[dependencies]
futures-channel = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["time", "stream"], git = "https://github.com/kgfw996/tokio#tls1.3" }
log = "0.4.7"
lazy_static = { version = "1.4.0", optional = true }
thiserror = "1.0.9"

[features]
default = ["static"]
static = ["lazy_static"]

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros", "rt-core"], git = "https://github.com/kgfw996/tokio#tls1.3" }
